# alchitry-loader

./: .gitignore  CMakeLists.txt  Makefile  README.md
driver/: 99-alchitry.rules
src/: Alchitry_Loader.cpp  config_type.cpp  config_type.h  jtag.cpp  jtag.h  jtag_fsm.cpp  jtag_fsm.h  loader.cpp  loader.h  mingw.thread.h  spi.cpp  spi.h
